Change rsc by Copilot